# httpq

./: .gitignore  LICENSE  README.md  contents.html  genindex.html  index.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg
.github/workflows/: docs-publish.yaml  pytest-cover-run.yaml
_modules/: index.html
_modules/httpq/: httpq.html
_sources/module/: httpq.rst.txt
_sources/writeups/: state-machine.rst.txt
docs/: requirements.txt
docs/source/: conf.py  contents.rst
docs/source/writeups/: quickstart.rst  state-machine.rst
httpq/: __init__.py  httpq.py
module/: httpq.html
tests/: test_httpq.py
writeups/: quickstart.html  state-machine.html
