[metadata]
name = httpq
author = Felipe Faria
author-email = felipefaria@me.com
summary = Parse, modify, and compile HTTP/1.1 messages.
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
requires-python = >=3.5
home-page = https://github.com/synchronizing/httpq
project_urls =
    Bug Tracker = https://github.com/synchronizing/httpq/issues
    Documentation = https://synchronizing.github.io/httpq/
    Source Code = https://github.com/synchronizing/httpq/tree/master
license = MIT
classifier =
    Programming Language :: Python :: Implementation :: CPython
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Topic :: Software Development :: Libraries
    Topic :: Utilities
keywords =
    httpq

[extras]
dev =
    pytest
    pytest-cov
    coveralls
    sphinx
    sphinx-copybutton
    sphinx-autobuild
    furo

[files]
packages =
    httpq

[flake8]
max-line-length = 88
